gts-macros/tests/compile_fail/invalid_file_extension.stderr
error: struct_to_gts_schema: Property 'nonexistent' not found in struct. Available fields: ["id"]
  --> tests/compile_fail/invalid_file_extension.rs:11:12
   |
11 | pub struct User {
   |            ^^^^
